fix background images and logo on project pages, logo still need fixing

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 html,
 body {
-  background: lightblue;
+  background: #E4F1FE;
   font-size: 16px;
   font-family: 'Source Sans Pro', sans-serif;
   line-height: 1.8em;
@@ -99,7 +99,7 @@ h6 {
 /* About me section
 ============================== */
 .intro-section {
-  background: lightblue;
+  background: #ecf0f1;
   padding: 2em 0;
 }
 
@@ -191,42 +191,6 @@ h2 {
   color: #fff;
 }
 
-
-
-/* Polymer Elements */
-.polymer-test {
-  padding: 25px;
-  background: teal;
-  color: white;
-}
-
-h2.post-title {
-  color: yellow!important;
-}
-
-blog-post::shadow .blog-post {
-  color: pink;
-}
-
-post-title::shadow h2 {
-  color: green;
-}
-
-
-/* overwrites element css.... */
-binding-datazor::shadow h2 {
-  font-weight: bold;
-  font-size: 1vw;
-  color: #2980b9;
-  background: red;
-}
-
-binding-datazor::shadow article {
-  background-color: red;
-}
-
-
-
 /* Media Queries
 ============================== */
 @media (min-width: 800px) {
@@ -285,6 +249,13 @@ binding-datazor::shadow article {
   .quote-section {
     padding: 2em 0;
     font-size: 2.5em;
+    color: #fff;
+    background: linear-gradient(rgba(54, 178, 222, 0.5),rgba(54, 178, 222, 0.5)), url(../img/background.jpg) no-repeat center fixed;
+    background-size: cover;
+  }
+
+  .intro-quote {
+      background:
   }
 
   .presentation-section {
