--- a/css/style.css
+++ b/css/style.css
@@ -140,6 +140,62 @@ a {
   letter-spacing: 2px;
 }
 
+
+.flexboxplay {
+    background: #3C3741;
+    padding: 25px;
+    width: 500px;
+    margin: auto;
+    border-radius: 3px;
+}
+.flexboxplay li {
+    color: white;
+    letter-spacing: 1px;
+    padding: 10px;
+    background: #3D8EB9;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
+.flexboxplay {
+    display: flex;
+    flex-flow: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.flexboxplay li {
+    flex-grow: 1;
+    height: 100px;
+}
+
+.flexboxplay li:nth-child(3) {
+    flex-grow: 5;
+    order: -1;
+    height: 35px;
+    align-self: flex-end;
+}
+
+.multi-column {
+    text-align: left;
+    background: #3C3741;
+    max-width: 800px;
+    margin: 15px auto;
+    color: white;
+    padding: 30px;
+    column-count: 4;
+    column-gap: 30px;
+    column-rule: 1px dotted #fff;
+    column-width: 200px;
+}
+
+.heading-two-column {
+    column-span: all;
+}
+
+
 /* Main Header */
 .main-header {
   margin-top: 1em;
@@ -158,6 +214,7 @@ a {
   height: 120px;
   border-radius: 50%;
   border: 5px solid #3498db;
+  filter: blur(4px);
 }
 
 .profile-text {
