--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,3 @@
-/* TODO:
-Remove testing CSS
-============================== */
-
-
-/* TODO:
-1 - put alt text on images [ ]
-============================== */
-/* TODO:
-2 - clean up with SMACSS [ ]
-============================== */
-/* TODO:
-3 - Fix the 404 page [ ]
-============================== */
-/* TODO:
-4 - HTML VALIDATE [ ]
-============================== */
-/* TODO:
-5 - CSS VALIDATE [ ]
-============================== */
-
-/* Mobile First
-============================== */
-
-
 /* Base Styles */
 * {
   box-sizing: border-box;
@@ -50,11 +25,6 @@ img {
   margin: 0 auto;
 }
 
-
-
-/* TODO
-OVERSEE NEW FONT STYLES
-============================== */
 h1,
 h2,
 figcaption h3 {
@@ -365,15 +335,6 @@ hr {
   line-height: 1.5;
 }
 
-
-
-
-
-
-
-/*
-TODO
-Testing fixed sidebar */
 .sidebar {
   position: fixed;
   right: 0;
@@ -519,47 +480,12 @@ Testing fixed sidebar */
     font-size: 1.5em;
   }
 
-
-
-
-
-
-
-
-  /* Portfolio Items Section */
-
   .portfolio-item p {
     font-size: 1.5em;
     letter-spacing: 0.5px;
     line-height: 1.5;
   }
-
-
-
-
-
-
-} /* END Tablet Media Query */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+}
 
 /* TODO: Desktop Resolution
 ============================== */
